--- a/rnTsSample/package.json
+++ b/rnTsSample/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-redux": "^7.1.24",
+    "axios": "^1.0.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-safe-area-context": "^4.4.1",
