--- a/ArticlesApp/android/gradle.properties
+++ b/ArticlesApp/android/gradle.properties
@@ -38,3 +38,9 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
 newArchEnabled=false
+
+# 인증서 정보
+RELEASE_STORE_FILE=app-release-key.keystore
+RELEASE_KEY_ALIAS=app-release
+RELEASE_STORE_PASSWORD=******
+RELEASE_KEY_PASSWORD=******
